# OpenAcc_LQCD

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  approx_-1_over_4_order_9_mloglm_6.4.REMEZ  compila_su_cudawn7.sh  compile.sh  compile_DBG_SPtoS.sh  compile_gcc.sh  compile_invtest.sh  compile_invtest_bis.sh  compile_invtest_bis_nopragma.sh  compile_multishift_and_gauge.sh  compile_multishift_and_gauge_nopragma.sh  compile_on_cudawn7_onlyacc.sh  compile_pgcc.sh  compile_scalprodtest.cpp  compile_scalprodtest.sh  compile_update.sh  compile_update_1md.sh  compile_update_openacc.sh  compile_update_soloopenacc.sh  compile_update_soloopenacc_CPU.sh  configure  configure.ac  configure_wrapper  debugstrategy.txt  flagconfig  invtest_openacc.cpp  lancia.sh  lancia_su_cudawn7.sh  makefile  moltest.cpp  moltest.cu  moltest_openacc.cpp  rationalapprox_calc  (+8 more)
Action/: action.cc
Conf/: conf.cc
Cuda/: cuda_deo.cu  cuda_dslash_dd_eo.cu  cuda_dslash_eo.cu  cuda_dslash_eo.cu_BACKUP  cuda_err.cu  cuda_exponentiate.cu  cuda_fermion_force.cu  cuda_find_min_max.cu  cuda_find_min_max.h  cuda_globalstuff.cu  cuda_init.cu  cuda_init.h  cuda_init_all.cu  cuda_inverter.cu  cuda_inverter.h  cuda_inverter_d.cu  cuda_mom_sum_mul.cu  cuda_reduce.cu  cuda_sol_sum.cu
DbgTools/: debug_macros_glvarcheck.c  deo_doe_test.c  main_cayley_hamilton.c  test_SigmaPToSigma.c  test_lambda.c  test_staples_SigmaPToSigma.c  test_stout_ingredients.c
DeviceInfo/: device_info.cu  device_info.h
Docs/: global_var_policy_example.c
Exception/: exception.cc
FermionForce/: fermionforce.cc
FermionMatrix/: fermionmatrix.cc
Fermions/: fermions.cc
Findminmax/: findminmax.cc
Gauss/: gauss.cc
Geometry/: geometry.cc
Global_sum/: global_sum.cc
Gpu/: gpu.cc  gpu.h
Include/: common_defines.h  fermion_parameters.c  fermion_parameters.h  global_const.cc  global_macro.cc  global_var.cc  parameters.cc
Init/: init.cc
Inverter/: cu_inverter.cc  cu_inverter.h  inverter.cc
Ipdot/: ipdot.cc  ipdot.cc~
MD_integrators/: leapfrog.cc  minimum_norm2.cc  multistep_2MN.cc  multistep_2MN.cc~  multistep_4MN.cc
Meas/: chiralmeas.cc  chiralmeas.cc~  ferm_meas.c  gauge_meas.c  gaugemeas.cc  gaugemeas.cc~
Momenta/: momenta.cc  momenta.cc~
NISSA_elements_reference/: su3.cpp
OLD_COMPILE/: compila_soloopenacc.sh  compila_su_cudawn7_1mdstep.sh  compila_su_cudawn7_nopragma.sh  compila_su_cudawn7_nopragma_cpu.sh  compila_su_cudawn7_solopartecpu.sh  compile_moltest.sh  compile_multishift_and_gauge.sh  compile_multishift_and_gauge_CUDAVER.sh  compile_multishift_and_gauge_nopragma.sh  compile_multishift_and_gauge_old.sh  compile_soloopenacc.sh  compile_update.sh  compile_update_nopragma.sh  compile_update_nopragma_cpu.sh  compile_update_solopartecpu.sh
src/: .gitignore  Makefile.am  Makefile.in  double_to_single_transformer.py
src/DbgTools/: dbgtools.c  dbgtools.h  debug_macros_glvarcheck.h  debugger_hook.c  debugger_hook.h  deo_doe_test.c  fermion_force_debugger_main.c  fermion_force_debugger_main_v2.c  ildgtest.c  inverter_multishift_test.c  main_cayley_hamilton.c  multishift_inverter_test.c  stouting_deottimizzato.c  test_SigmaPToSigma.c  test_exponential.c  test_staples_SigmaPToSigma.c  test_stout_ingredients.c
src/Include/: acceptances_info.c  acceptances_info.h  all_include.h  checkinput.c  common_defines.h  debug.c  debug.h  defect_info.c  defect_info.h  fermion_parameters.c  fermion_parameters.h  hash.c  hash.h  init.c  init.h  inverter_tricks.c  inverter_tricks.h  markowchain.c  markowchain.h  memory_wrapper.c  memory_wrapper.h  montecarlo_parameters.c  montecarlo_parameters.h  parameters.cc  rep_info.c  rep_info.h  setting_file_parser.c  setting_file_parser.h  stringify.h  struct_def.cc  tell_geom_defines.c  tell_geom_defines.h
src/Meas/: baryon_number_utilities.c  baryon_number_utilities.h  ferm_meas.c  ferm_meas.h  gauge_meas.c  gauge_meas.h  magnetic_susceptibility_utilities.c  magnetic_susceptibility_utilities.h  measure_topo.c  measure_topo.h  polyakov.c  polyakov.h
src/Mpi/: .geometry_multidev.h.swp  communications.c  communications.h  dbgtools.h  fermion_mpi_util.c  fermion_mpi_util.c_NOTUSED  geometry_multidev.c  geometry_multidev.h  multidev.c  multidev.h
src/OpenAcc/: .gitignore  HPT_utilities.c  HPT_utilities.h  Mod_functions.c  Mod_functions.h  action.c  action.h  alloc_settings.c  alloc_settings.h  alloc_vars.c  alloc_vars.h  backfield.c  backfield.h  backfield_parameters.c  backfield_parameters.h  binary.c  cayley_hamilton.c  cayley_hamilton.h  cooling.c  cooling.h  dbgtools.h  deviceinit.c  deviceinit.h  double_complex.h  double_to_single_transformer.py  electric-magnetic_corr.c  fermion_force.c  fermion_force.h  fermion_force_utilities.c  fermion_force_utilities.h  fermion_matrix.c  fermion_matrix.h  fermion_matrix_indirect.c  fermionic_utilities.c  fermionic_utilities.h  field_corr.c  field_corr.h  field_times_fermion_matrix.c  field_times_fermion_matrix.h  find_min_max.c  (+55 more)
src/Rand/: random.c  random.cc  random.h
src/Rand/RANDOM/: dSFMT.c
src/RationalApprox/: rationalapprox.c  rationalapprox.h  rationalapprox_calc.cc  rationalapprox_calc_fixed_order.cc
src/tests_and_benchmarks/: deo_doe_test.c  inverter_multishift_test.c  test_and_benchmarks.c  test_and_benchmarks.h
src/tools/: checkinput.c  confconverter.c  confrestart.c
tools/: Makefile.am  Makefile.in  eval_ratapprox.c  eval_ratapprox.cc  makefile  normalize_ratapprox.c  normalize_ratapprox.cc  rationalapprox.cpp  rationalapprox.h  rationalapprox_calc.cc  rationalapprox_calc_fixed_order.cc  rgen  seeBinary.c
tools/test/: benchmark.pg.DPSP.set.proto  diff_ascii_files.py  fermion_parameters.set  prepare_tbps.sh  profiling.pg.DPSP.set.proto  regression.test.sh  test.pg.DPSP.set.proto
tools/test/ratapproxes/: approx_-1_over_4_mlogerr_3.8_mloglm_3.3.REMEZ  approx_-1_over_4_mlogerr_3.8_mloglm_6.2.REMEZ  approx_-1_over_4_mlogerr_7.8_mloglm_3.3.REMEZ  approx_-1_over_4_mlogerr_7.8_mloglm_6.2.REMEZ  approx_1_over_8_mlogerr_8.1_mloglm_3.3.REMEZ  approx_1_over_8_mlogerr_8.1_mloglm_6.2.REMEZ
(+195 files in other folders)
