AUTOMAKE_OPTIONS = subdir-objects


__common_generated_sources = \
	OpenAcc/sp_alloc_vars.c  \
	OpenAcc/sp_alloc_vars.h  \
	OpenAcc/sp_backfield.c  \
	OpenAcc/sp_backfield.h  \
	OpenAcc/sp_cayley_hamilton.h  \
	OpenAcc/sp_fermion_force_utilities.c  \
	OpenAcc/sp_fermion_force_utilities.h  \
	OpenAcc/sp_fermionic_utilities.c  \
	OpenAcc/sp_fermionic_utilities.h  \
	OpenAcc/sp_fermion_matrix.c  \
	OpenAcc/sp_fermion_matrix.h  \
	OpenAcc/sp_inverter_full.c  \
	OpenAcc/sp_inverter_full.h  \
	OpenAcc/sp_inverter_multishift_full.c  \
	OpenAcc/sp_inverter_multishift_full.h  \
	OpenAcc/sp_ipdot_gauge.c  \
	OpenAcc/sp_ipdot_gauge.h  \
	OpenAcc/sp_matvecmul.h  \
	OpenAcc/sp_md_integrator.c  \
	OpenAcc/sp_md_integrator.h  \
	OpenAcc/sp_plaquettes.c  \
	OpenAcc/sp_plaquettes.h  \
	OpenAcc/sp_rettangoli.c  \
	OpenAcc/sp_rettangoli.h  \
	OpenAcc/sp_single_types.h  \
	OpenAcc/sp_stouting.c  \
	OpenAcc/sp_stouting.h  \
	OpenAcc/sp_struct_c_def.h  \
	OpenAcc/sp_su3_measurements.c  \
	OpenAcc/sp_su3_measurements.h  \
	OpenAcc/sp_su3_utilities.c  \
	OpenAcc/sp_su3_utilities.h  \
  OpenAcc/sp_topological_action.c \
	OpenAcc/sp_topological_action.h \
  OpenAcc/sp_topological_force.c \
	OpenAcc/sp_topological_force.h \
	DbgTools/sp_dbgtools.h  \
	DbgTools/sp_dbgtools.c  \
	Meas/sp_gauge_meas.c \
	Meas/sp_gauge_meas.h \
	Mpi/sp_communications.h  \
	Mpi/sp_communications.c 


__common_sources = \
	DbgTools/dbgtools.c \
	DbgTools/dbgtools.h \
	DbgTools/debugger_hook.h \
	Include/all_include.h \
	Include/common_defines.h \
	Include/debug.c \
	Include/debug.h \
	Include/fermion_parameters.c \
	Include/fermion_parameters.h \
	Include/hash.c \
	Include/hash.h \
	Include/init.h \
	Include/inverter_tricks.c \
	Include/inverter_tricks.h \
	Include/montecarlo_parameters.c \
	Include/montecarlo_parameters.h \
	Include/setting_file_parser.c \
	Include/setting_file_parser.h \
	Include/stringify.h \
	Include/tell_geom_defines.c \
	Include/tell_geom_defines.h \
	Include/memory_wrapper.c \
	Include/memory_wrapper.h \
	Meas/baryon_number_utilities.c \
	Meas/baryon_number_utilities.h \
	Meas/ferm_meas.c \
	Meas/ferm_meas.h \
	Meas/gauge_meas.c \
	Meas/gauge_meas.h \
	Meas/magnetic_susceptibility_utilities.c \
	Meas/magnetic_susceptibility_utilities.h \
	Meas/polyakov.c \
	Meas/polyakov.h \
	Meas/measure_topo.c \
	Meas/measure_topo.h \
	Mpi/communications.c \
	Mpi/communications.h \
	Mpi/dbgtools.h \
	Mpi/geometry_multidev.h \
	Mpi/multidev.c \
	Mpi/multidev.h \
	OpenAcc/action.c \
	OpenAcc/action.h \
	OpenAcc/alloc_settings.c \
	OpenAcc/alloc_settings.h \
	OpenAcc/alloc_vars.c \
	OpenAcc/alloc_vars.h \
	OpenAcc/backfield.c \
	OpenAcc/backfield.h \
	OpenAcc/backfield_parameters.c \
	OpenAcc/backfield_parameters.h \
	OpenAcc/cayley_hamilton.h \
	OpenAcc/cooling.c \
	OpenAcc/cooling.h \
	OpenAcc/deviceinit.c \
	OpenAcc/deviceinit.h \
	OpenAcc/double_complex.h \
	OpenAcc/fermion_force.c \
	OpenAcc/fermion_force.h \
	OpenAcc/fermion_force_utilities.c \
	OpenAcc/fermion_force_utilities.h \
	OpenAcc/fermionic_utilities.c \
	OpenAcc/fermionic_utilities.h \
	OpenAcc/fermion_matrix.c \
	OpenAcc/fermion_matrix.h \
	OpenAcc/field_times_fermion_matrix.c \
	OpenAcc/field_times_fermion_matrix.h \
	OpenAcc/find_min_max.c \
	OpenAcc/find_min_max.h \
	OpenAcc/float_double_conv.c \
	OpenAcc/float_double_conv.h \
	OpenAcc/geometry.c \
	OpenAcc/geometry.h \
	OpenAcc/inverter_full.c \
	OpenAcc/inverter_full.h \
	OpenAcc/inverter_mixedp.c \
	OpenAcc/inverter_mixedp.h \
	OpenAcc/inverter_multishift_full.c \
	OpenAcc/inverter_multishift_full.h \
	OpenAcc/inverter_package.c \
	OpenAcc/inverter_package.h \
	OpenAcc/inverter_wrappers.c \
	OpenAcc/inverter_wrappers.h \
	OpenAcc/io.c \
	OpenAcc/io.h \
	OpenAcc/ipdot_gauge.c \
	OpenAcc/ipdot_gauge.h \
	OpenAcc/matvecmul.h \
	OpenAcc/md_integrator.c \
	OpenAcc/md_integrator.h \
	OpenAcc/md_parameters.c \
	OpenAcc/md_parameters.h \
	OpenAcc/plaquettes.c \
	OpenAcc/plaquettes.h \
	OpenAcc/random_assignement.c \
	OpenAcc/random_assignement.h \
	OpenAcc/rettangoli.c \
	OpenAcc/rettangoli.h \
	OpenAcc/single_types.h \
	OpenAcc/sp_fermion_force.c \
	OpenAcc/stouting.c \
	OpenAcc/stouting.h \
	OpenAcc/struct_c_def.h \
	OpenAcc/su3_measurements.c \
	OpenAcc/su3_measurements.h \
	OpenAcc/su3_utilities.c \
	OpenAcc/su3_utilities.h \
  OpenAcc/topological_action.c \
	OpenAcc/topological_action.h \
  OpenAcc/topological_force.c \
	OpenAcc/topological_force.h \
	OpenAcc/update_versatile.c \
	OpenAcc/update_versatile.h \
	Rand/random.c \
	Rand/random.h \
	RationalApprox/rationalapprox.c \
	RationalApprox/rationalapprox.h \
	tests_and_benchmarks/test_and_benchmarks.c \
	tests_and_benchmarks/test_and_benchmarks.h 

bin_PROGRAMS = main deo_doe_test inverter_multishift_test checkinput confconverter confrestart

noinst_LIBRARIES = libdbghook.a

# in case we wanted other directories for utilities and benchmarks
#utilitiesdir = $(bindir)/utilities
#benchmarksdir = $(bindir)/benchmarks
#benchmarks_PROGRAMS = deo_doe_test inverter_multishift_test 
#utilities_PROGRAMS = checkinput confconverter confrestart

main_SOURCES =	OpenAcc/main.c\
	$(__common_sources) 

main_LDADD = libdbghook.a

nodist_main_SOURCES = $(__common_generated_sources)

deo_doe_test_SOURCES = tests_and_benchmarks/deo_doe_test.c \
	$(__common_sources)

nodist_deo_doe_test_SOURCES = $(__common_generated_sources)

inverter_multishift_test_SOURCES = tests_and_benchmarks/inverter_multishift_test.c \
	$(__common_sources)

nodist_inverter_multishift_test_SOURCES = $(__common_generated_sources)

checkinput_SOURCES = tools/checkinput.c \
	$(__common_sources)

nodist_checkinput_SOURCES = $(__common_generated_sources)

confconverter_SOURCES = tools/confconverter.c \
	$(__common_sources)

nodist_confconverter_SOURCES = $(__common_generated_sources)

confrestart_SOURCES = tools/confrestart.c \
	$(__common_sources)

nodist_confrestart_SOURCES = $(__common_generated_sources)

libdbghook_a_SOURCES = DbgTools/debugger_hook.c
libdbghook_a_CFLAGS = -O0
